# STaR

./: BuildMemory.md  CODaDATA.md  INSTALL.md  LICENSE  Memory_Construction  README.md  RUNNING.md  SETUP.md  UserQuery.md  pyproject.toml  setup.py
configs/: calib_coda.txt  config.yaml
configs/dataset/: CODa_docker.yaml
configs/inference/: docker.yaml
configs/scenegraph/: collection_docker_coda.yaml
data/coda/navqa/: data.csv
docker/: Dockerfile.cuda128_humble_uv  Dockerfile.star_uv  docker-compose.yml  pyproject.bootstrap.toml  run_star.sh
docs/: BuildMemory.md  CODaDATA.md  DOCKER.md  INSTALL.md  RUNNING.md  UserQuery.md
scripts/: eval_AIB.py  publish_coda_rosbag.py  run_data_collection_lidar.py  run_gradio_interface.py  vis_3D.py
scripts/bash/: download_weights.sh
scripts/question_scripts/: form_question_jsons_bbox.py
src/star/LLT/: models.py
src/star/agents/: agent.py  functions_wrapper.py  non_agent.py  ragbot_agent.py  star_agent_aib.py  star_agent_hybrid.py  star_agent_sg.py  star_agent_vanila.py  vlm_non_agent.py
src/star/captioners/: captioner.py  nvila_captioner.py  openai_captioner.py  vila_captioner.py
src/star/clio_batch/: aib_helper.py  helpers.py  ib_cluster.py  object_cluster.py
src/star/memory/: hybrid_reranker.py  ib_geometry.py  memory.py  milvus_memory.py  milvus_memory_coda.py  text_memory.py  video_memory.py
src/star/prompts/: VILA_scene_prompt.py  agent_gen_system_prompt.txt  agent_gen_system_prompt_visual.txt  agent_system_prompt.txt  agent_system_prompt_org.txt  agent_system_prompt_sg.txt  agent_system_prompt_sg_visual.txt  agent_system_prompt_visual.txt  agent_system_prompt_visual_backup.txt  agent_system_prompt_visual_videocap only.txt  agent_system_prompt_visual_withSG.txt  generate_system_prompt_visual.txt  generate_system_prompt_visual_old.txt  generate_system_prompt_visual_v2.txt
src/star/scenegraph/: SG_visual.py  helpers.py  scenegraph_constructor_depth.py  scenegraph_constructor_lidar.py
src/star/some_class/: amg_class.py  amg_class_hardware.py  amg_class_nvidia.py  contour.py  (+7 more)
(+13 files in other folders)
